--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,9 @@ services:
     ports:
       - 5432:5432
     environment:
-      POSTGRES_USER: Team1
+      POSTGRES_USER: team1
       POSTGRES_PASSWORD: password1
-      POSTGRES_DB: DejaBru
+      POSTGRES_DB: dejabru
 
   adminer:
     image: adminer
