--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,11 +8,11 @@ services:
     ports:
       - 5432:5432
     environment:
-      POSTGRES_USER: team1
-      POSTGRES_PASSWORD: password1
-      POSTGRES_DB: dejabru
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
     volumes:
-      - db-data:/var/lib/postgresql/data
+      - ./example_db:/var/lib/postgresql/data
 
   adminer:
     image: adminer
@@ -20,3 +20,5 @@ services:
     restart: always
     ports:
       - 8080:8080
+volumes:
+  example_db:
