--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,7 @@ pandas== 1.4.0
 psycopg2== 2.9.3
 numpy== 1.22.1
 python-dotenv== 0.19.2
+requests==2.27.1
+pytest==6.2.5
+#psycopg2-binary==2.9.3
+#pandas==1.4.0
