--- a/homebru-etl-lambda-deploy/cloudformation.yml
+++ b/homebru-etl-lambda-deploy/cloudformation.yml
@@ -11,21 +11,11 @@ Resources:
     Type: AWS::Lambda::Function
     Properties:
       FunctionName: !Sub ${NamePrefix}-etl-lambda
-      Runtime: python3.9
+      Runtime: python3.7
       Timeout: 5
       Handler: app/homebru_etl_lambda.lambda_handler
       Role: !GetAtt LambdaFunctionRole.Arn
       Code: .deployment/lambda-package.zip
-      Layers:
-        - arn:aws:lambda:eu-west-1:123980920791:layer:python_39_pandas_layer:1
-        - arn:aws:lambda:eu-west-1:123980920791:layer:python_39_psycopg2_layer:1
-      # VpcConfig:
-      #   SecurityGroupIds:
-      #     - Fn::ImportValue:
-      #         'network-infra-VPCSGID'
-      #   SubnetIds:
-      #     - Fn::ImportValue:
-      #         !Sub 'network-infra-PrivateSubnet0ID'
   CafeDataBucket:
     Type: AWS::S3::Bucket
     Properties:
@@ -54,9 +44,7 @@ Resources:
           Action:
             - sts:AssumeRole
       Path: "/"
-      PermissionsBoundary: 
-        !Sub arn:aws:iam::${AWS::AccountId}:policy/ScopePermissions
-        # !Sub arn:aws:iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole
+      PermissionsBoundary: !Sub arn:aws:iam::${AWS::AccountId}:policy/ScopePermissions
       Policies:
       - PolicyName: LambdaLogsPolicy
         PolicyDocument:
