--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,6 @@ on:
     branches:
       - main
 jobs:
-  list-s3-buckets:
     name: deploy script
     runs-on: ubuntu-latest
     env:
@@ -13,7 +12,7 @@ jobs:
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_DEFAULT_REGION: eu-west-1
     steps:
-      - name: checkout-repo
+      - name: group-1-project-repo
         uses: actions/checkout@v2
       - name: deploy
         run: | 
