--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,4 +19,4 @@ jobs:
           echo "Homebru deploys!"
           ls -R
           chmod +x ./homebru-etl-lambda-deploy/deploy.sh
-#         ./homebru-etl-lambda-deploy/deploy.sh -k ${AWS_ACCESS_KEY_ID} -s ${AWS_SECRET_ACCESS_KEY}
+          ./homebru-etl-lambda-deploy/deploy.sh 
