--- a/homebru-etl-lambda-deploy/cloudformation.yml
+++ b/homebru-etl-lambda-deploy/cloudformation.yml
@@ -27,6 +27,30 @@ Resources:
         SubnetIds:
           - Fn::ImportValue:
               !Sub 'network-infra-PrivateSubnet0ID'
+  LoadLambdaFunction:
+    Type: AWS::Lambda::Function
+    Properties:
+      ReservedConcurrentExecutions: 1 # Makes this run one lambda at a time - temporarily until queuing is done
+      FunctionName: !Sub ${NamePrefix}-load-lambda
+      Runtime: python3.9
+      Timeout: 300
+      Handler: app/homebru_load_lambda.lambda_handler
+      Role: !GetAtt LambdaFunctionRole.Arn
+      Code: .deployment/lambda-package.zip
+      Layers:
+        - arn:aws:lambda:eu-west-1:123980920791:layer:python_39_pandas_layer:1
+        - arn:aws:lambda:eu-west-1:123980920791:layer:python_39_psycopg2_layer:1
+      VpcConfig:
+        SecurityGroupIds:
+          - Fn::ImportValue:
+              'network-infra-VPCSGID'
+        SubnetIds:
+          - Fn::ImportValue:
+              !Sub 'network-infra-PrivateSubnet0ID'
+  CafeTransformedDataBucket:
+    Type: AWS::S3::Bucket
+    Properties:
+      BucketName: homebru-cafe-transformed-data-bucket
   CafeDataBucket:
     Type: AWS::S3::Bucket
     Properties:
