--- a/homebru-etl-lambda-deploy/cloudformation.yml
+++ b/homebru-etl-lambda-deploy/cloudformation.yml
@@ -7,14 +7,14 @@ Parameters:
     Type: String
     Description: Prefix to be used for creating uniquely named resources
 Resources:
-  ETLLambdaFunction:
+  ETLambdaFunction:
     Type: AWS::Lambda::Function
     Properties:
       ReservedConcurrentExecutions: 1 # Makes this run one lambda at a time - temporarily until queuing is done
-      FunctionName: !Sub ${NamePrefix}-etl-lambda
+      FunctionName: !Sub ${NamePrefix}-extract-transform-lambda
       Runtime: python3.9
       Timeout: 300
-      Handler: app/homebru_etl_lambda.lambda_handler
+      Handler: app/homebru_extract_transform_lambda.lambda_handler
       Role: !GetAtt LambdaFunctionRole.Arn
       Code: .deployment/lambda-package.zip
       Layers:
@@ -27,6 +27,43 @@ Resources:
         SubnetIds:
           - Fn::ImportValue:
               !Sub 'network-infra-PrivateSubnet0ID'
+  LoadLambdaFunction:
+    Type: AWS::Lambda::Function
+    Properties:
+      ReservedConcurrentExecutions: 1
+      FunctionName: !Sub ${NamePrefix}-load-lambda
+      Runtime: python3.9
+      Timeout: 120
+      Handler: app/homebru_load_lambda.lambda_handler
+      Role: !GetAtt LambdaFunctionRole.Arn
+      Code: .deployment/lambda-package.zip
+      Layers:
+        - arn:aws:lambda:eu-west-1:123980920791:layer:python_39_pandas_layer:1
+        - arn:aws:lambda:eu-west-1:123980920791:layer:python_39_psycopg2_layer:1
+      VpcConfig:
+        SecurityGroupIds:
+          - Fn::ImportValue:
+              'network-infra-VPCSGID'
+        SubnetIds:
+          - Fn::ImportValue:
+              !Sub 'network-infra-PrivateSubnet0ID'
+  LoadLambdaFunctionEventSourceMapping:
+    Type: AWS::Lambda::EventSourceMapping
+    Properties:
+      BatchSize: 1
+      Enabled: true
+      EventSourceArn: !GetAtt LoadQueue.Arn
+      FunctionName: !GetAtt LoadLambdaFunction.Arn
+  LoadQueue:
+    Type: AWS::SQS::Queue
+    Properties:
+      QueueName: !Sub ${NamePrefix}-load-queue
+      DelaySeconds: 0
+      VisibilityTimeout: 120
+  CafeTransformedDataBucket:
+    Type: AWS::S3::Bucket
+    Properties:
+      BucketName: homebru-cafe-transformed-data-bucket
   CafeDataBucket:
     Type: AWS::S3::Bucket
     Properties:
@@ -34,12 +71,12 @@ Resources:
       NotificationConfiguration:
         LambdaConfigurations:
           - Event: s3:ObjectCreated:*
-            Function: !GetAtt ETLLambdaFunction.Arn
+            Function: !GetAtt ETLambdaFunction.Arn
   CafeDataBucketPermission:
     Type: AWS::Lambda::Permission
     Properties:                                 
       Action: lambda:InvokeFunction
-      FunctionName: !Ref ETLLambdaFunction
+      FunctionName: !Ref ETLambdaFunction
       Principal: s3.amazonaws.com
       SourceArn: "arn:aws:s3:::homebru-cafe-data-bucket"
   LambdaFunctionRole:
@@ -61,6 +98,7 @@ Resources:
         - arn:aws:iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole
         - arn:aws:iam::aws:policy/AmazonS3ReadOnlyAccess
         - arn:aws:iam::aws:policy/AmazonSSMReadOnlyAccess
+        - arn:aws:iam::aws:policy/AmazonSQSFullAccess
       Policies:
       - PolicyName: LambdaLogsPolicy
         PolicyDocument:
