--- a/homebru-etl-lambda-deploy/cloudformation.yml
+++ b/homebru-etl-lambda-deploy/cloudformation.yml
@@ -64,6 +64,10 @@ Resources:
     Type: AWS::S3::Bucket
     Properties:
       BucketName: homebru-cafe-transformed-data-bucket
+      # NotificationConfiguration: # Not sure if we need this entire part or not, idk
+      #   LambdaConfigurations:
+      #     - Event: s3:ObjectCreated:*
+      #       Function: !GetAtt LoadLambdaFunction.Arn
   CafeDataBucket:
     Type: AWS::S3::Bucket
     Properties:
